# c2rat

./: .gitignore  Cargo.toml  README.md
server/: package.json  tsconfig.json
server/prisma/: schema.prisma
server/prisma/migrations/20230620192317_/: migration.sql
server/prisma/migrations/20230620192816_/: migration.sql
server/prisma/migrations/20230620200100_/: migration.sql
server/src/: app.ts
server/src/lib/: mysql.ts
src/: constants.rs  helpers.rs  main.rs  utils.rs
